# ANDnXOR_DC28_Badge

./: README.md  TROUBLESHOOTING.md
firmware/badge/: CMakeLists.txt  HEADER  Kconfig  addr2line.sh  build.sh  dfu.sh  flash.sh  prj.conf  willhunting.yaml
firmware/badge/boards/arm/private_ryan/: Kconfig.board  Kconfig.defconfig  pinmux.c  private_ryan.dts  (+2 more)
firmware/badge/dts/bindings/: ssd1306_spi.yaml  st7735.yaml  uc1701.yaml
firmware/badge/src/: CMakeLists.txt  Kconfig  ibm_bios.c  main.c  space_mono.c  system.h  wh_app.c  wh_app.h  wh_app.ld  wh_bender.c  wh_bender.h  wh_bling.c  wh_bling.h  wh_flag.c  wh_flag.h  wh_fs.c  wh_fs.h  wh_led.c  wh_led.h  wh_log_cdc_acm.c  wh_menu.c  wh_menu.h  wh_post.c  wh_post.h  wh_settings.c  wh_settings.h  wh_shell.c  wh_shell.h  wh_shell_cdc_acm.c  wh_shell_cdc_acm.h  wh_ui.c  wh_ui.h  wh_ui_status.c  wh_ui_status.h  wh_unlocks.h  wh_util.c  wh_util.h  word-list-4096.h
firmware/badge/src/apps/: CMakeLists.txt  Kconfig  wh_app_about.c  wh_app_basic edit.c  wh_app_basic.c  wh_app_basic_util.c  wh_app_basic_util.h  wh_app_bling.c  wh_app_decoder.c  wh_app_flag_util.c  wh_app_flag_util.h  wh_app_photos.c  wh_app_reset.c  wh_app_settings.c
firmware/badge/src/drivers/: CMakeLists.txt  Kconfig  bbq10.c  bbq10.h  bbq10.kconfig  ssd1306_spi.c  ssd1306_spi.h  ssd1306_spi.kconfig  st7735.c  st7735.h  st7735.kconfig  wh_adc_sense.c  wh_adc_sense.h  wh_adc_sense.kconfig
firmware/badge/src/gfx/: bg.c  bg.h  caution.h  caution.raw  dfu.h  dfu.raw  dfu_old.h  dfu_old.raw  dfu_raw.sh  gfx.md
firmware/badge/src/lib/: CMakeLists.txt
(+37 files in other folders)
